# ansimple

./: .pre-commit-config.yaml  README.md  pyproject.toml
ansimple/: __init__.py  ansimple.py
data/: hosts  playbook.yaml
tests/: test_ansimple.py
